--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
   <div class="container-ganas-porque-ganas">
-    <img src="./img/ganas-por-que-ganas-logo.png" alt="ganas porque ganas" class="ganas-porque-ganas-logo">
-    <img src="./img/nuevo-concurso.jpg" alt="nuevo concurso" class="ganas-porque-ganas-nuevo-concurso">
+    <img src="https://pmi--c.documentforce.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&versionId=0684H00000HUUJo&operationContext=DELIVERY&contentId=05T4H00000uYp3q&page=0&d=/a/4H00000263CS/jaKXn6kw9oaEUNBaz9QFwd_eXMjMM8HiorjUzVZ3nxg&oid=00D58000000cA7m&dpt=null&viewId=" alt="ganas porque ganas" class="ganas-porque-ganas-logo">
+    <img src="https://pmi--c.documentforce.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Jpg&versionId=0684H00000HUUJt&operationContext=DELIVERY&contentId=05T4H00000uYp3v&page=0&d=/a/4H00000263CX/2h6JsjmT2g1ZzTMXZ9hGPXK4mpj4tmJfmk.YyPhwaU0&oid=00D58000000cA7m&dpt=null&viewId=" alt="nuevo concurso" class="ganas-porque-ganas-nuevo-concurso">
     <p class="ganas-porque-ganas-text">Despide el año a lo grande
       y gana premios increíbles para disfrutar con quien quieras.</p>
     <p class="ganas-porque-ganas-text-2">más de $600.000 en premios </p>
-    <img src="./img/premios.png" alt="premios" class="ganas-porque-ganas-premios">
+    <img src="https://pmi--c.documentforce.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&versionId=0684H00000HUUJy&operationContext=DELIVERY&contentId=05T4H00000uYp40&page=0&d=/a/4H00000263Cc/kN1aMCoJ3ve98yLVjTGJtW.kgclUgwnBYv4vd1XCV5g&oid=00D58000000cA7m&dpt=null&viewId=" alt="premios" class="ganas-porque-ganas-premios">
     <p class="ganas-porque-ganas-detalle-premios">
       8 iPhones 12 128GB
       45 Samsung A52 128GB
@@ -40,8 +40,8 @@
       <p class="ganas-porque-ganas-chance-text">¡ Cuantos mÁs</p>
       <p class="ganas-porque-ganas-chance-text">boletos mÁs</p>
       <p class="ganas-porque-ganas-chance-text">chances de ganar !</p>
-      <button class="ganas-porque-ganas-cta">pide aquí</button>
-      <button class="ganas-porque-ganas-cta">juega aquí</button>
+      <a href="#" class="ganas-porque-ganas-cta">pide aquí</a>
+      <a href="#" class="ganas-porque-ganas-cta">juega aquí</a>
     </div>
     <div class="ganas-porque-ganas-no-te-pierdas">
       <p class="ganas-porque-ganas-no-te-pierdas-text">
